<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/main_backdrop"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:contentDescription="Poster"
        android:fitsSystemWindows="true"
        android:scaleType="fitXY" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                style="@style/bold"
                android:text="@string/title"
                app:layout_column="0"
                app:layout_row="0" />

            <TextView
                android:id="@+id/movie_title"
                style="@style/bold"
                app:layout_column="1"
                app:layout_row="0"
                android:textSize="24sp"
                android:textAlignment="center" />

            <TextView
                style="@style/bold"
                android:text="@string/Genre"
                app:layout_column="0"
                app:layout_row="1" />

            <TextView
                android:id="@+id/movie_genre"
                style="@style/normal"
                app:layout_column="1"
                app:layout_row="1" />


            <TextView
                style="@style/bold"
                android:text="@string/duration"
                app:layout_column="0"
                app:layout_row="2" />

            <TextView
                android:id="@+id/movie_duration"
                style="@style/normal"
                app:layout_column="1"
                app:layout_row="2" />

            <TextView
                style="@style/bold"
                android:text="@string/director"
                app:layout_column="0"
                app:layout_row="3" />

            <TextView
                android:id="@+id/movie_director"
                style="@style/normal"
                app:layout_column="1"
                app:layout_row="3" />

            <TextView
                style="@style/bold"
                android:text="@string/released"
                app:layout_column="0"
                app:layout_row="4" />

            <TextView
                android:id="@+id/movie_released"
                style="@style/normal"
                app:layout_column="1"
                app:layout_row="4" />


            <TextView
                style="@style/bold"
                android:text="@string/Writer"
                app:layout_column="0"
                app:layout_row="5" />

            <TextView
                android:id="@+id/movie_writers"
                style="@style/normal"
                app:layout_column="1"
                app:layout_row="5" />

            <TextView
                style="@style/bold"
                android:text="@string/actors"
                app:layout_column="0"
                app:layout_row="6" />

            <TextView
                android:id="@+id/movie_actors"
                style="@style/normal"
                app:layout_column="1"
                app:layout_row="6" />

            <TextView
                style="@style/bold"
                android:text="@string/plot"
                app:layout_column="0"
                app:layout_row="7" />

            <TextView
                android:id="@+id/movie_plot"
                style="@style/normal"
                app:layout_column="1"
                app:layout_row="7" />
        </android.support.v7.widget.GridLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>